# Lumina

./: .gitignore  AGENTS.md  DevGuide.md  DevLog.md  DevRecord.md  PROJECT_HANDOFF.md  README.md  TODO.md  fgo_bot.py  gui_main.py  main.py  opencv_claude_1.py  opencv_test.py  pyproject.toml  yolo_test.py
config/: battle_config.yaml
core/: __init__.py  adb_controller.py  app.py  battle_actions.py  battle_ocr.py  battle_snapshot.py  command_card_recognition.py  config.py  coordinates.py  fgo_bot.py  game_state.py  image_recognizer.py  ocr_engine.py  portrait_embedding.py  resources.py  smart_battle.py  state_detector.py  support_portrait_recognition.py  support_portrait_verification.py  workflow.py
docs/: current-project-implementation-audit.md  ocr_np_validation.md
scripts/: _debug_support_regions.py  analyze_command_cards.py  build_reference_bank.py  build_support_portraits.py  check_portrait_verifier.py  check_support_portraits.py  coordinate_picker.py  custom_sequence_recorder.py  evaluate_command_cards.py  mask_region_picker.py  ocr_np_batch_check.py  ocr_region_check.py  watch_support_match.py
test_image/: ocr_np_samples.jsonl
tests/: test_action_executor.py  test_adb_controller.py  test_battle_flow_module.py  test_build_reference_bank.py  test_command_card_chain.py  test_command_card_recognition.py  test_command_card_solver.py  test_config.py  test_custom_sequence_recorder.py  test_device_config.py  test_git_commit_skill.py  test_gui_app.py  test_gui_tools.py  test_mask_region_picker.py  test_runtime_exports.py  test_runtime_flow_behaviors.py  (+5 more)
(+113 files in other folders)
