[project]
name = "lumina"
version = "0.1.0"
description = "基于 adbutils 与 OpenCV 的 FGO 自动化脚本，当前优先适配 MuMu 模拟器"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adbutils>=2.12.0",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "pyyaml>=6.0.3",
    "ultralytics>=8.4.21",
]
